@@ -1,5 +1,5 @@
 # flext - C++ layer for Max/MSP and pd (pure data) externals
-# Copyright (c) 2001-2003 Thomas Grill (xovo@gmx.net)
+# Copyright (c) 2001-2004 Thomas Grill (gr@grrrr.org)
 #
 
 # where is PD?
@@ -7,7 +7,7 @@ PDPATH=c:\programme\audio\pd
 
 # where is the pthreads package?
 # (comment out if you use the standard pd package where pthreads are included)
-# PTHREADS=F:\prog\packs\pthreads		
+# PTHREADS=c:\data\prog\packs\pthreads		
 
 # where is MS VC++? 
 # (should be commented out when called from the Visual Studio Command prompt)
@@ -16,12 +16,12 @@ PDPATH=c:\programme\audio\pd
 # where is the SndObj directory?
 # headers are searched in SNDOBJ/include, the sndobj.lib in SNDOBJ/lib
 # (leave blank or comment out to disable SndObj support)
-SNDOBJ=f:\prog\audio\sndobj
+SNDOBJ=c:\data\prog\audio\sndobj
 
 # where is the STK include directory?
 # headers are searched in STK/include, the stk.lib in STK/lib
 # (leave blank or comment out to disable STK support)
-STK=f:\prog\audio\stk
+STK=c:\data\prog\audio\stk
 
 # where should flext libraries be built?
 # object files will be placed in subfolders
