@@ -75,10 +75,10 @@ OBJPATH=td
 !else
 
 !ifndef _DEBUG
-CFLAGS=$(CFLAGS) $(OFLAGS) /ML
+CFLAGS=$(CFLAGS) $(OFLAGS) /MT
 OBJPATH=s
 !else
-CFLAGS=$(CFLAGS) $(DFLAGS) /MLd
+CFLAGS=$(CFLAGS) $(DFLAGS) /MTd
 OBJPATH=sd
 !endif
 
